<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Views.PatientEditActivity">


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        app:itemTextColor="@color/white"
        app:itemIconTint="@color/white"
        app:menu="@menu/navigation"/>
    <!--EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etpatientId"
        android:hint="@string/patient_id"/-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etpatientFirstName"
        android:hint="First Name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etpatientLastName"
        android:hint="@string/last_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etpatientRoom"
        android:hint="@string/room"
        android:inputType="number"/>

    <!--EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etnurseId"
        android:hint="@string/nurse_id"/-->

    <Button
        android:id="@+id/btnEditPatient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        android:onClick="savePatient"
        android:text="@string/save_patient" />

</LinearLayout>